backend-deployment.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: back-service
  type: ClusterIP
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployement
  namespace: exam
  labels:
    app: back-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-service
  template:
    metadata:
      labels:
        app: back-service
    spec:
      containers:
        - name: backend
          image: khaoula1el/projet_docker:backend-app
          ports:
            - containerPort: 5000
              name: backend-port
