frontend-deployment.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: exam
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: front-port
  selector:
    app: backend
  type: LoadBalancer
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: frontend
          image: khaoula1el/projet_docker:frontend-app
          ports:
            - containerPort: 80
              name: front-port
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            tcpSocket:
                port: 80
            periodSeconds: 10
            failureThreshold: 3
