mongodb-deployment.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: exam
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    app: mongodb
  type: ClusterIP
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: exam
  labels:
    app: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4.6
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 5
          periodSeconds: 10
        startupProbe:
            tcpSocket:
                port: 27017
            periodSeconds: 10
            failureThreshold: 3
        ports:
        - containerPort: 27017
          name: mongodb-port
        volumeMounts:
        - name: mongovol
          mountPath: /var/lib/docker/volumes/mongovol/_data
          
      volumes:
      - name: mongovol
        persistentVolumeClaim:
          claimName: mongovolpvc
